# 869-spaceship-titanic

./: .gitignore  869_Uncle Steve's Credit Union.ipynb  LICENSE  README.md  pyproject.toml  requirements.txt
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
config/: optuna_space.yaml
data/processed/: X_test.csv  X_test_cat_MostFrequent_encoded.csv  X_test_cat_missing_encoded.csv  X_train.csv  X_train_cat_missing_encoded.csv  test_dataset_spaceship_titanic_processed.csv
notebooks/: 01-eda-initial-analysis.ipynb  02-Feature-Engineering-final-draft.ipynb  02-Feature-Engineering-scrap-03.ipynb  02-feature-engineering-v3.ipynb  03-Model-Baseline.ipynb  03-baseline-model-v2.ipynb  04-XGBoost-LR-Gridsearch.ipynb  04-feature-imp-analysis-and-selection-deenu-feat.ipynb  04-feature-imp-analysis-and-selection.ipynb  05-XGBoost_Optimization_TPE_05.ipynb  05-baseline-model-best-feats.ipynb  05-hyperparameter-opt-random-search-v1.ipynb  06-Final-Evaluation-Submission.ipynb  06-hyperparameter-opt-TPE-optune-v1.ipynb  06-hyperparameter-opt-grid-search-v1.ipynb  07-final-evaluation-submission.ipynb  2026 869 Project-03.ipynb  XGBoost_81201_0.53.ipynb
notebooks/archive/: 01_EDA.ipynb  02-Feature Engineering.ipynb  02-Feature-Engineering-final-draft-01.ipynb  02-Feature-Engineering-final-draft-02.ipynb  05-XGBoost-optimization-gridsearch.ipynb  06-XGboost-optimization-TPE-v2.ipynb  20250519_RF_Pipeline_Yun.ipynb  2026 869 Project EDA.ipynb  2026 869 Project-01.ipynb  2026 869 Project-02.ipynb  2026 869 Project-Cat-MostFrequent-Encoded-Test-04.ipynb  XGBoost_80827_0.51.ipynb  (+2 more)
